# esp32-dashboard

./: CMakeLists.txt  collect_data.py  index.html  monitor.py  plot_data.py  sensor_data.db
main/: CMakeLists.txt  idf_component.yml  main.c
